--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^16.9.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-id-swiper": "^3.0.0",
     "react-scripts": "3.4.0",
+    "swiper": "^5.3.6",
     "typescript": "~3.7.2"
   },
   "scripts": {
