--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.0",
     "react-id-swiper": "^3.0.0",
     "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
     "swiper": "^5.3.6",
     "typescript": "~3.7.2"
   },
