--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "Chrome 72"
     ],
     "development": [
       "last 1 chrome version",
